# vote-certo/resources/views/admin/admin.blade.php
@@ -10,20 +10,22 @@
     <!-- Option 1: Include in HTML -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.min.css">
-    @if($view == 'users')
-    <link rel="stylesheet" href="{{ asset('css/admin/usersAdmin.css') }}">
+    @if ($view == 'users')
+        <link rel="stylesheet" href="{{ asset('css/admin/usersAdmin.css') }}">
     @endif
     <link rel="stylesheet" href="{{ asset('css/admin/dashboardAdmin.css') }}">
 </head>
 
 <body>
-    <x-side-bar-admin :position="$user->position"  :view="$view"/>
+    <x-side-bar-admin :position="$user->position" :view="$view" />
 
     <!-- Conteúdo principal -->
-    @if($view == 'dashboard')
-        <x-dashboard-admin :name="$user->name" :position="$user->position" :image_profile="$user->img_profile"/>
+    @if ($view == 'dashboard')
+        <x-dashboard-admin :name="$user->name" :position="$user->position" :image_profile="$user->img_profile" />
     @elseif($view == 'users')
-        <x-users-admin :name="$user->name" :position="$user->position" :image_profile="$user->img_profile" :data="$data"/>
+        <x-users-admin :name="$user->name" :position="$user->position" :image_profile="$user->img_profile" :data="$data" />
+    @elseif($view == 'elections')
+        <x-elections-admin :name="$user->name" :position="$user->position" :image_profile="$user->img_profile" />
     @endif
 
     <!-- Bootstrap JS -->
@@ -31,8 +33,8 @@
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
-    @if($view == 'users')
-    <script src="{{ asset('js/admin/usersAdmin.js') }}"></script>
+    @if ($view == 'users')
+        <script src="{{ asset('js/admin/usersAdmin.js') }}"></script>
     @endif
     <script src="{{ asset('js/admin/dashboardAdmin.js') }}"></script>
 </body>
