# vote-certo/resources/views/components/admin/dashboard/dashboard.blade.php
@@ -3,13 +3,7 @@
     <x-nav-profile-admin :name="$name" />
 
     <div class="content-dashboard">
-        @if($position == 99)
-            <x-main-dashboard-admin />
-        @elseif($position == 50)
-            <x-main-dashboard-suporte />
-        @elseif($position == 1)
-            <x-main-dashboard-user />
-        @endif
+        <p>teste</p>
     </div>
 
 </div>
